samples/_failures_safe/1761517128_c48042_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da7304bd.c: In function ‘main’:
./samples/SAFE/__tmp_da7304bd.c:148:5: error: ‘dijk’ undeclared (first use in this function)
  148 |     dijk
      |     ^~~~
./samples/SAFE/__tmp_da7304bd.c:148:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_da7304bd.c:148:9: error: expected ‘;’ at end of input
  148 |     dijk
      |         ^
      |         ;
./samples/SAFE/__tmp_da7304bd.c:148:5: error: expected declaration or statement at end of input
  148 |     dijk
      |     ^~~~
